# Discordus

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
DiscordRPCpp/: CMakeLists.txt
DiscordRPCpp/include/: DiscordRPC.h
DiscordRPCpp/src/: DiscordRPC.cpp
Discordus/: CMakeLists.txt
Discordus/include/: OpenSans.h
Discordus/src/: Main.cpp
Discordus/src/windows/: resource.rc
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
src/: App.cpp  App.h  FileSerializer.hpp  MainWindow.cpp  MainWindow.h  MainWindow.hpp  NumberValidator.hpp  PresenceData.hpp
